final slide title ready

--- a/prez.qmd
+++ b/prez.qmd
@@ -37,3 +37,9 @@ $~$
 <hr color = #CADC30>
 
 ------------------------------------------------------------------------
+
+## Open Science for the Greater Good of Science
+
+<hr color = #CADC30>
+
+------------------------------------------------------------------------
