--- a/prez.qmd
+++ b/prez.qmd
@@ -15,13 +15,19 @@ editor: visual
 ![](images/great_frog.jpg){fig-align="center" width="5.33in"}
 
 <h2 style="text-align:center; font-size:22.0pt;">
+
 Jake Eisaguirre^1,2^\
 Data Manager, M.S. Environmental Data Science
+
 </h2>
+
 $~$
+
 <h2 style="font-size: 12.0pt; text-align:left;">
+
 ^1^Resilience Institute Bridging Biological Training and Research\
 ^2^National Center of Ecological Analysis and Synthesis
+
 </h2>
 
 ------------------------------------------------------------------------
@@ -29,6 +35,15 @@ $~$
 ## Open Science
 
 <hr color = #CADC30>
+
+::: columns
+::: {.column .incremental width="30%"}
+:::
+
+::: {.column width="70%"}
+![](images/os.jpg){fig-align="center" width="6in"}
+:::
+:::
 
 ------------------------------------------------------------------------
 
