slowly creating fade in and fade out fragements

--- a/prez.qmd
+++ b/prez.qmd
@@ -63,12 +63,21 @@ $~$
 
 ------------------------------------------------------------------------
 
-## Open Science at RIBBiTR {.smaller}
+## Open Science at RIBBiTR {.smaller auto-animate="true"}
 
 <hr color = #CADC30>
 
 ::: columns
-::: {.incremental .column width="42%"}
+::: {.column width="42%"}
+::: {.fragment .fade-in-then-out}
+<h2 style="font-size: 16.0pt;">
+
+1.  Accessible
+    -   Cloud based PostgreSQL Database
+
+</h2>
+:::
+::: {.fragment .fade-in-then-out}
 <h2 style="font-size: 16.0pt;">
 
 1.  Accessible
@@ -76,34 +85,67 @@ $~$
     -   Database made public upon grant completion
     -   RStudio (R), Jupyter Notebook (Python), and DBeaver (PostgreSQL)
     -   Published papers unlocked?
-2.  Reproducible
-    -   Reproducible analysis in R and Python
-    -   Quarto manuscripts, documents, and presentations
-    -   Collaboration with Git/Github in RStudio (R) and Jupyter Notebook (Python)
-3.  Inclusive
-    -   CURE?
-    -   PEP?
-    -   R101?
 
 </h2>
 :::
+:::
 
 ::: {.column width="58%"}
+::: {.r-stack}
+![](images/RIBBiTR%20-%20survey_data.png){fig-align="center" width="6in"}
 
+::: {.fragment .r-stack }
+![](images/dataone.png){fig-align="center" width="6in"}
+:::
+:::
+:::
 :::
 
-:::
+<!-- 2.  Reproducible -->
 
-::: notes
-:::
+<!--     -   Reproducible analysis in R and Python -->
 
+<!--     -   Quarto manuscripts, documents, and presentations -->
+
+<!--     -   Collaboration with Git/Github in RStudio (R) and Jupyter Notebook (Python) -->
+
+<!-- 3.  Inclusive -->
+
+<!--     -   CURE? -->
+
+<!--     -   PEP? -->
+
+<!--     -   R101? -->
+
+<!-- ::: -->
+
+<!-- ::: {.column .incremental width="58%"} -->
+
+<!-- ::: {.fragment fragment-index=1} -->
+
+<!-- ![](images/RIBBiTR - survey_data.png){fig-align="center" width="6in"} -->
+
+<!-- ::: -->
+
+<!-- ::: {.fragment} -->
+
+<!-- ![](images/dataone.png){fig-align="center" width="6in"} -->
+
+<!-- ::: -->
+
+<!-- ::: -->
+
+<!-- ::: -->
+
+<!-- ::: notes -->
+
+<!-- ::: -->
 
 ------------------------------------------------------------------------
 
 ## Open Science for the Greater Good of Science {style="font-size:24.0pt;"}
 
 <hr color = #CADC30>
-
 
 ::: notes
 :::
