--- a/prez.qmd
+++ b/prez.qmd
@@ -158,7 +158,9 @@ And finally Inclusivity, are we developing these pipelines with the commitment o
 ::: notes
 At RIBBiTR we have been doing our best to promote and adhere to open science principles. 
 
-In the realm of Accessibility we have an internal PostgreSQL relational database stored on an AWS server to allow researcher to connect on the back end query data from any where in the world. We have also created a front end webapp to allow researchers to explore and download data to their local device. We also strongly recommend researchers to utilize open source software like RStudio, Jupyter Lab, and DBeaver, for analysis. And following completion of our grant the entire database will be stored on a public repository like DataOne.       
+In the realm of Accessibility we have an internal PostgreSQL relational database stored on an AWS server to allow researcher to connect on the back end query data from any where in the world. We have also created a front end webapp to allow researchers to explore and download data to their local device. We also strongly recommend researchers to utilize open source software like RStudio, Jupyter Lab, and DBeaver, for analysis. And following completion of our grant the entire database will be stored on a public repository like DataOne. 
+
+For promoting reproducibility at RIBBiTR I have created this diagram illustrating our workflow we promote within RIBBiTR: walk through workflow
 :::
 
 ------------------------------------------------------------------------
