--- a/prez.qmd
+++ b/prez.qmd
@@ -180,8 +180,8 @@ As for inclusive: we at RIBBiTR have worked very hard to promote and build our e
 -   Increase efficiency and quality of research
 -   Allow for expansion of innovation
 -   Escalates collaboration 
--   Transparent sharing of data
 -   Verification through efficient reproducible checking
+-   Transparent sharing of data
 -   Public Data Repositories - Dark Data
 
 </h2>
@@ -193,7 +193,11 @@ As for inclusive: we at RIBBiTR have worked very hard to promote and build our e
 :::
 
 ::: notes
+The adoption of open science principles through out the sciences has and will almost certainly continue to increase the efficiency and quality of research, allow for expansion of innovation, and escalate collaboration. With open science principles our colleagues can verify our research at a much more efficient pace by providing the raw data, code for analysis, and manuscript all in a reproducible repository. 
 
+Which brings me to my final point of, which I will admit I am slightly bias towards as I am a data manager, but the importance of transparent data sharing through public repositories. Take a moment and think about all the data you have ever collected or a student of yours has collected, whether is be one day in the field, a masters students two years worth of data, or your entire career studying a system. Is that data just sitting on a hard drive on a dusty old laptop in your closet? Well that is called dark data in the academic world and I suspect we could pool all the dark data in this room and have readily available data for an endless supply of master or even PhD students. Share your data and lets work together to uncover the answers hidden in our data. 
+
+Thank you
 :::
 
 ------------------------------------------------------------------------
